# libdplyr

./: .clang-tidy  .cppcheck  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CI_ANALYSIS_REPORT.md  CMakeLists.txt  CODEMAP.md  Cargo.toml  GEMINI.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  USAGE_GUIDE.md  all_jobs.json  build_dplyr_extension.sh  cbindgen.toml  ci-analysis-report.md  codecov.yml  deny.toml  descriptor.yml  extension_config.cmake  extension_version.h.in  failed_log_attempt10.txt  failed_log_attempt11.txt  failed_log_attempt4.txt  failed_log_attempt5.txt  failed_log_attempt7.txt  failed_log_attempt8.txt  failed_log_attempt9.txt  full_failed_log.txt  go.mod  howtouse.md  install.ps1  install.sh  integration-benchmark-results.md  (+15 more)
.github/: RELEASE_TEMPLATE.md  SECRETS_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: MainDistributionPipeline.yml  README.md  benchmark.yml  ci-go-backup.yml  ci-optimized.yml  ci-stable.yml  ci.yml  code-quality.yml  cross_platform_test.yml  dependabot-auto-merge.yml  notification.yml  performance.yml  quality.yml  release-deploy.yml  release.yml  security.yml  test-install.yml
.kiro/specs/duckdb-extension/: design.md  requirements.md  tasks.md
.kiro/specs/libdplyr-transpiler/: design.md  requirements.md  tasks.md
.kiro/specs/rust-ci-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/stdin-stdout-cli/: design.md  requirements.md  tasks.md
.kiro/steering/: README.md  code-quality.md  error-handling.md  language.md  performance-optimization.md  project-guidelines.md  sql-dialect-support.md  testing-standards.md
benches/: cli_performance_benchmark.rs  performance_analysis.rs  simple_test.rs  transpile_benchmark.rs
cmd/libdplyr/: main.go
community-pr/: description.yml
docs/: CI_CD_GUIDE.md  CI_FAILURE_TRACKING.md  CI_PREVENTION.md  code-quality.md  community-repo-submission.md  packaging.md  performance-monitoring.md  release-process.md  submodules.md
examples/: dialect_examples.rs  pipeline_test.rs  test_tokens_debug.rs  transpiler_usage.rs
extension/: AGENTS.md
extension/include/: dplyr.h  dplyr_extension.h  dplyr_extension.hpp
extension/src/: dplyr.cpp  dplyr_extension.cpp
internal/ast/: ast.go
internal/parser/: parser.go  parser_test.go
internal/renderer/: renderer.go  renderer_test.go
libdplyr_c/: AGENTS.md  Cargo.toml  build.rs  deny.toml  geiger-report.json
libdplyr_c/.cargo/: config.toml
libdplyr_c/benches/: extension_loading_benchmark.rs  simple_benchmark.rs  transpile_benchmark.rs
libdplyr_c/src/: cache.rs  compile.rs  error.rs  ffi.rs  ffi_safety.rs  lib.rs  memory.rs  metadata.rs  options.rs  performance_tests.rs  system.rs  validation.rs
libdplyr_c/src/tests/: mod.rs
scripts/: ci_monitor.py  create-release.sh  housekeeping-logs.sh  install-advanced.sh  install-duckdb-extension.sh  install-quality-tools.sh  package-all-platforms.sh  package-artifacts.bat  package-artifacts.sh  performance_regression_detector.py  pre-commit.sh  quality-check.bat  quality-check.sh  run-performance-tests.sh  run_hello_world.sh  test-installation.sh  test-release.sh  test_workflows.sh  validate_workflows.py  verify-packages.sh
src/: cli.rs  error.rs  ffi.rs  lexer.rs  lib.rs  main.rs  parser.rs  performance.rs  pipe_syntax.rs  sql_generator.rs
src/cli/: debug_logger.rs  error_handler.rs  json_output.rs  mod.rs  output_formatter.rs  pipeline.rs  signal_handler.rs  stdin_reader.rs  validator.rs
src/parser/: ast.rs  mod.rs  parse.rs
src/parser/tests/: parse_tests.rs
src/sql_generator/: AGENTS.md  assemble.rs  dialect.rs  mod.rs  mutate_support.rs
src/sql_generator/tests/: mod.rs
test/sql/: dplyr.test
tests/: cli_integration_tests.rs  cpp_integration_tests_README.md  cross_platform_tests.rs  duckdb_extension_integration_test.cpp  error_handler_tests.rs  integration_tests.rs  json_output_tests.rs  output_formatter_tests.rs  run_cpp_integration_tests.bat  run_cpp_integration_tests.sh  run_smoke_tests.bat  run_smoke_tests.sh  signal_handling_tests.rs  smoke.sql  smoke_tests_README.md  stdin_reader_tests.rs  valgrind.supp  validator_tests.rs
