[package]
name = "libdplyr"
version = "0.1.0"
edition = "2021"
authors = ["libdplyr contributors"]
description = "A Rust-based transpiler that converts R dplyr syntax to SQL queries"
license = "MIT"
repository = "https://github.com/example/libdplyr"
keywords = ["dplyr", "sql", "transpiler", "r", "database"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
# Dependencies for CLI interface
clap = { version = "4.0", features = ["derive"] }

# Dependencies for error handling
thiserror = "1.0"

# Dependencies for static initialization
lazy_static = "1.4"

# Dependencies for terminal detection
is-terminal = "0.4"

# Dependencies for signal handling
signal-hook = "0.3"
libc = "0.2"

# Optional serialization support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
colored = "3.0.0"

[dev-dependencies]
# Dependencies for benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Additional dependencies for testing
pretty_assertions = "1.4"
tempfile = "3.20.0"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "libdplyr"
path = "src/main.rs"

[[bench]]
name = "transpile_benchmark"
harness = false

[[bench]]
name = "performance_analysis"
harness = false

[lib]
name = "libdplyr"
path = "src/lib.rs"
