[package]
name = "libdplyr"
version = "0.1.2"
edition = "2021"
authors = ["libdplyr contributors"]
description = "A Rust-based transpiler that converts R dplyr syntax to SQL queries"
license = "MIT"
repository = "https://github.com/example/libdplyr"
keywords = ["dplyr", "sql", "transpiler", "r", "database"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
# Core dependencies (wasm-compatible)
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI-only dependencies (not available on wasm)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.0", features = ["derive"] }
is-terminal = "0.4"
signal-hook = { version = "0.3", features = ["iterator"], default-features = false }
libc = "0.2"
colored = "2.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon", "minwindef"] }

[dev-dependencies]
# Dependencies for benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Additional dependencies for testing
pretty_assertions = "1.4"
tempfile = "3.20.0"

# C binding generation

[features]
default = []

[[bin]]
name = "libdplyr"
path = "src/main.rs"

[[bench]]
name = "transpile_benchmark"
harness = false

[[bench]]
name = "performance_analysis"
harness = false

[[bench]]
name = "cli_performance_benchmark"
harness = false

[[bench]]
name = "simple_test"
harness = false

[lib]
name = "libdplyr"
path = "src/lib.rs"

[profile.release]
panic = "abort"

[workspace]
members = [
    ".",
    "libdplyr_c"
]
