[package]
name = "libdplyr_c"
version = "0.2.0"
edition = "2021"
description = "C-compatible API for libdplyr DuckDB extension"
license = "MIT"
authors = ["libdplyr contributors"]
build = "build.rs"

# R3-AC1: C ABI 호환성을 위한 정적 라이브러리 생성
# staticlib: DuckDB C++ extension과 링크하기 위한 정적 라이브러리
# rlib: Rust 테스트 및 벤치마크용
# Note: cdylib 제거 - Wasm/Emscripten에서 .so 파일 복사 오류 발생
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
# 기존 libdplyr 크레이트 의존성
libdplyr = { path = ".." }
thiserror = "1.0"

# R9-AC1: panic 안전성을 위한 의존성
# FFI 경계에서 panic을 catch하기 위해 std::panic 사용 (내장)
# 추가 의존성: 해시 계산을 위한 크레이트
lru = "0.16"

# R6-AC1: 캐싱을 위한 의존성
lazy_static = "1.4"

# R9-AC2: 입력 검증 및 보안을 위한 의존성
once_cell = "1.19"

# libc is only available on non-wasm targets
[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc = "0.2"

[features]
default = []

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

# R7-AC4: 성능 벤치마킹을 위한 의존성
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
glob = "0.3"

# 벤치마크 설정
[[bench]]
name = "transpile_benchmark"
harness = false

[[bench]]
name = "extension_loading_benchmark"
harness = false

[[bench]]
name = "simple_benchmark"
harness = false
